--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -44,6 +44,9 @@
     }
   
     @media only screen and (max-width: 600px) {
+      .container {
+        width: 90%;
+      }
       .contact-container {
         width: 90%;
       }
