--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,28 @@
   margin: auto;
   background-color: #f1f6f9;
 }
+
+.main-container {
+  scroll-snap-type: y mandatory;
+}
+
+.container-section {
+  scroll-snap-align: start;
+  height: 100vh;
+}
+
 .container {
-  justify-content: center;
+  max-height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.row {
+  margin: 0;
+}
+
+.col-10 {
+  margin: auto;
 }
