--- a/src/components/NavMenu.css
+++ b/src/components/NavMenu.css
@@ -30,7 +30,7 @@
   }
 
   .nav-menu.active {
-    background-color: transparent;
+    background-color: rgba(1, 7, 53, 1);
     left: 0;
     opacity: 1;
     transition: all 0.5s ease;
@@ -60,6 +60,11 @@
     transform: translate(50%, 50%);
     font-size: 1.8rem;
     cursor: pointer;
+  }
+
+  .overlay {
+    height: 100vh;
+    background-color: rgba(1, 7, 53, 1);
   }
 
   @media only screen and (max-width: 600px) {
