--- a/src/components/About.css
+++ b/src/components/About.css
@@ -30,7 +30,7 @@ h3 {
 }
 
 .underline--text {
-    background-image: linear-gradient(120deg, #92b1ee 0%, #92b1ee 100%);
+    background-image: linear-gradient(120deg, #9ba4b4 0%, #9ba4b4 100%);
       background-repeat: no-repeat;
       background-size: 100% 0.2em;
       background-position: 0 88%;
@@ -40,5 +40,15 @@ h3 {
     }
 
 @media only screen and (max-width: 600px) {
-        
+    .profile-img {
+        border-radius: 50%;
+        width: 150px;
+        height: 150px;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    p {
+        font-size: 13px;
+    }
 }
