--- a/src/components/NavMenu.css
+++ b/src/components/NavMenu.css
@@ -75,4 +75,8 @@
       padding: 0;
       font-size: 1.5rem;
     }
+    .nav-links:hover {
+      background-color: transparent;
+      color: #9ba4b4;
+    }
   }
