--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,41 @@
 .col-10 {
   margin: auto;
 }
+
+.underline--text {
+  background-image: linear-gradient(120deg, #9ba4b4 0%, #9ba4b4 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: 0 88%;
+    transition: background-size 0.25s ease-in;
+    width: fit-content;
+    margin-bottom: 10%;
+  }
+
+  h3 {
+    margin: auto;
+}
+
+@media only screen and (max-width: 600px) {
+  h3 {
+      font-size: 1.35rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+      max-width: 95%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .container {
+      max-width: 85%;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .container {
+      max-width: 70%;
+  }
+}
