--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,30 +1,38 @@
+/* Carousel */
+
+.Ripple-parent {
+    width: 100px;
+    margin: auto;
+}
 .card {
     background-color: transparent;
     border: none;
     height: 380px;
 }
 
-.Ripple-parent {
-    width: 100px;
-    margin: auto;
+.card-body {
+    background-color: #9ba4b41a;
+    margin-top: 15px;
+    padding: 1rem;
 }
 
 .card img {
     width: 100px;
     margin: auto;
-    height: 25%;
+    height: 100px;
     object-fit: contain;
     filter: grayscale(.8);
 }
 
-.card-body {
-    background-color: #9ba4b41a;
-    margin-top: 15px;
+.card-title, .card-text p {
+    margin-bottom: .2rem;
 }
 
-.col-4 {
-    padding: 5px;
+.carousel-indicators > li {
+    background-color: rgba(1, 7, 53, 1);
 }
+
+/* Additional Achievements */
 
 .ul-experience {
     padding-inline-start: 20px !important;
@@ -41,10 +49,12 @@
     margin: 0;
 }
 
-.carousel-indicators > li {
-    background-color: rgba(1, 7, 53, 1);
-}
-
-@media only screen and (max-width: 600px) {
-
+@media only screen and (min-width: 768px) and (max-width: 850px) {
+    .card {
+        height: 400px;
+    }
+    .col-md-4 {
+        padding-right: 5px;
+        padding-left: 5px;
+    }
 }
