--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -28,6 +28,7 @@ h1, .typing-text {
     height: 60px;
 }
 
+/* CV Button */
 .btn-cv {
     padding: 6px 14px;
     border-radius: 2px;
@@ -50,12 +51,18 @@ h1, .typing-text {
   }
 
   /* Arrow */
+  .arrow i {
+    margin-top: 50px;
+    color: #fafafa;
+  }
+
   .bounce {
     -moz-animation: bounce 1s infinite;
     -webkit-animation: bounce 1s infinite;
     animation: bounce 1s infinite;
   }
 
+  /* Media Queries */
   @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
       transform: translateY(0);
