--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -49,7 +49,13 @@
     margin: 0;
 }
 
-@media only screen and (min-width: 768px) and (max-width: 850px) {
+@media only screen and (max-width: 600px) {
+    .card {
+        height: 400px;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 894px) {
     .card {
         height: 400px;
     }
