--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -28,6 +28,13 @@
     margin-bottom: .2rem;
 }
 
+.grade {
+    font-weight: 600;
+    color: #394867; 
+    font-size: 1rem;
+    margin: 10px 0;
+}
+
 .carousel-indicators > li {
     background-color: rgba(1, 7, 53, 1);
 }
