--- a/src/components/About.css
+++ b/src/components/About.css
@@ -8,6 +8,8 @@
     margin-bottom: 30px;
 }
 
+/* Media queries */
+
 @media only screen and (max-width: 600px) {
     .profile-img {
         border-radius: 50%;
