--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -54,7 +54,16 @@
 .ul-experience li p {
     line-height: 1;
     margin: 0;
+    font-weight: bold;
 }
+
+.ul-experience li p span {
+    color: #9ba4b4;
+    font-size: 85%;
+    font-weight: 400;
+}
+
+/* Media queries */
 
 @media only screen and (max-width: 600px) {
     .card {
